# hexlet-hello-world

./: pyproject.toml
hexlet_hello_world/: module.py
hexlet_hello_world/scripts/: main.py  second_script.py
