[project]
name = "hexlet-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "more-itertools>=10.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_hello_world"]

[project.scripts]
my-app = "hexlet_hello_world.scripts.main:main"
